k8s/overlays/staging-deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finna-app-staging
  labels:
    name: finna-app-staging
    purpose: finops-cost-tracking
    environment: staging
