k8s/overlays/staging-deploy/finna-app-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finna-app-ui
  namespace: finna-app-staging
  labels:
    app: finna-app-ui
    environment: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finna-app-ui
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: finna-app-ui
        environment: staging
    spec:
      containers:
      - name: ui
        image: finna-app-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
