k8s/overlays/staging-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finops-api
  namespace: finna-app-staging
  labels:
    app: finops-api
    environment: staging
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: finops-api
