k8s/overlays/staging-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finna-api
  namespace: finna-app-staging
  labels:
    app: finops-api
    environment: staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: finna-app-staging.ces.abssrv.it
    http:
      paths:
      - backend:
          service:
            name: finops-api
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - finna-app-staging.ces.abssrv.it
    secretName: finna-app-staging-tls
